--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     padding:0;
     font-size:100%;
     box-sizing: border-box;
-    font-family: 'Opens Sans', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 nav, ul{
@@ -112,6 +112,7 @@ header li :last-child{
     font-size:2rem;
     margin-bottom: 35px;
     color:#191c03;
+    text-align: center;
 }
 
 .conheca-o-hotel p{
@@ -156,4 +157,166 @@ header li :last-child{
     .conheca-o-hotel .grid li.small, .conheca-o-hotel .grid li.large{
         flex-basis: 100%;
     }
+}
+
+/*CARACTERISTICAS*/
+
+.caracteristicas {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 100px 50px ;
+    background: #191c03;
+}
+
+.caracteristicas h3{
+    font-size:2rem;
+    margin-bottom: 35px;
+    color:#fff;
+    text-align: center;
+}
+
+.caracteristicas p{
+    max-width: 800px;
+    margin-bottom: 35px;
+    color:#fff;
+    text-align: center;
+}
+
+.caracteristicas hr{
+    width:200px;
+    height: 2px;
+    background-color: #fff;
+    margin-bottom: 70px;
+    border: none;
+}
+
+.caracteristicas .grid{
+    width:100%;
+    display: flex;
+}
+
+.caracteristicas .grid li{
+    padding: 0 30px;
+    text-align: center;
+}
+
+.caracteristicas .grid li i{
+    color:#c3c63b;
+    font-size: 3.5rem;
+    margin-bottom:30px;
+}
+
+.caracteristicas .grid li h4{
+    font-size:1.5rem;
+    color:#c3c63b;
+    margin-bottom:30px;
+
+}
+
+.caracteristicas .grid li p{
+    color:#fff;
+
+}
+
+@media(max-width:850px){
+    .caracteristicas .grid{flex-direction: column;}
+}
+
+/*NEWSLETTER*/
+
+.newsletter{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding:100px 50px
+}
+
+.newsletter h3{
+    font-size: 2rem;
+    margin-bottom: 35px;
+    color:#c3c63b;
+    text-align: center;
+}
+
+.newsletter p{
+    max-width: 800px;
+    margin-bottom: 35px;
+    color:#c3c63b;
+    text-align: center;
+}
+
+.newsletter hr{
+    width:200px;
+    height: 2px;
+    background-color: #c3c63b;
+    margin-bottom: 70px;
+    border:none;
+
+}
+
+.newsletter form{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap:wrap;
+    width: 80%;
+    max-width: 800px;
+}
+
+.newsletter input{
+    padding:15px;
+    border:1px solid #c3c63b;
+    border-radius: 4px;
+    margin-right: 15px;
+    flex: 1;
+}
+
+.newsletter button{
+    padding:15px;
+    background-color: #c3c63b;
+    color:#fff;
+    text-transform: uppercase;
+    border:none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+@media(max-width:700px){
+   .newsletter input{flex-basis: 100%; margin-bottom: 15px;}
+}
+
+/*FOOTER*/
+
+footer{
+    display: flex;
+    flex-direction: column;
+    background-color:#191c03;
+    padding:50px 0;
+    align-items: center;
+
+}
+
+footer ul{
+    display: flex;
+    margin-bottom: 25px;
+}
+
+footer ul li{
+    margin-right: 10px;
+
+}
+
+footer ul li:last-child{
+    margin-right: 0;
+}
+
+footer ul li a{
+    color:#c3c63b;
+    font-size: 2rem;
+}
+
+footer p{
+    color:#c3c63b;
+    text-align: center;
 }
